started building the class

--- a/Prototyping deduplication.ipynb
+++ b/Prototyping deduplication.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 2, 2, 0, 0)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "datetime.datetime.strptime('2018-2-2', '%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +83,7 @@
        "(1096, 1096, 1096)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +104,7 @@
        "1096"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +171,7 @@
        "0"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +219,7 @@
        "(741389, 676.0, 444833.0)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +273,7 @@
        "0.9943342776203966"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +324,7 @@
        "(702, 702)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +344,7 @@
        "573"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "702it [00:00, 14783.65it/s]\n"
+      "702it [00:00, 14430.79it/s]\n"
      ]
     }
    ],
@@ -368,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1001,7 +1023,7 @@
        " [701]]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,19 +1044,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "【智能推荐】人工智能：小米电视的杀手锏：\n",
-      "在9月27日的小米秋季新品发布会上，大家的焦点都集中到雷军发布的新手机——小米5s/5s Plus上，而忽视了王川发布的小米电视新品。而在老冀看来，小米电视同样表现出了很强的进取心，因为它拿出... 查看全文：O网页链接\n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
       "----------------------\n",
       " \n",
-      "【智能推荐】人工智能：小米电视的杀手锏：\n",
-      "在9月27日的小米秋季新品发布会上，大家的焦点都集中到雷军发布的新手机——小米5s/5s Plus上，而忽视了王川发布的小米电视新品。而在老冀看来，小米电视同样表现出了很强的进取心，因为它拿出... 查看全文：O网页链接\n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
+      "----------------------\n",
+      " \n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
+      "----------------------\n",
+      " \n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
+      "----------------------\n",
+      " \n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
+      "----------------------\n",
+      " \n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
+      "----------------------\n",
+      " \n",
+      "#小米电视3s#人工智能电视，蜕变真实的你！\n",
       "----------------------\n",
       " \n"
      ]
@@ -1042,130 +1077,17 @@
    ],
    "source": [
     "for idx in random.choice(clusters):\n",
-    "    print(texts[i])\n",
+    "    print(texts[idx])\n",
     "    print('----------------------')\n",
     "    print(' ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0,\n",
-       "  1,\n",
-       "  3,\n",
-       "  5,\n",
-       "  16,\n",
-       "  42,\n",
-       "  61,\n",
-       "  116,\n",
-       "  224,\n",
-       "  276,\n",
-       "  341,\n",
-       "  557,\n",
-       "  671,\n",
-       "  675,\n",
-       "  676,\n",
-       "  678,\n",
-       "  679,\n",
-       "  689],\n",
-       " [7, 20, 104, 213, 342, 365, 388, 389, 401, 449, 509, 513, 521],\n",
-       " [21, 282],\n",
-       " [30, 199],\n",
-       " [53, 284],\n",
-       " [78,\n",
-       "  80,\n",
-       "  83,\n",
-       "  297,\n",
-       "  311,\n",
-       "  337,\n",
-       "  343,\n",
-       "  347,\n",
-       "  348,\n",
-       "  349,\n",
-       "  378,\n",
-       "  384,\n",
-       "  392,\n",
-       "  394,\n",
-       "  397,\n",
-       "  410,\n",
-       "  422,\n",
-       "  430,\n",
-       "  434,\n",
-       "  454,\n",
-       "  462,\n",
-       "  465,\n",
-       "  466,\n",
-       "  468,\n",
-       "  480,\n",
-       "  482,\n",
-       "  484,\n",
-       "  499,\n",
-       "  502,\n",
-       "  507,\n",
-       "  512,\n",
-       "  518,\n",
-       "  523,\n",
-       "  524],\n",
-       " [81, 139, 146, 168, 408, 432],\n",
-       " [100, 188, 374, 382, 407, 437, 550, 591, 594],\n",
-       " [109, 201, 597, 603],\n",
-       " [113, 319],\n",
-       " [122, 182, 257, 364],\n",
-       " [123, 242, 546, 608],\n",
-       " [131, 325],\n",
-       " [133, 358],\n",
-       " [150, 178],\n",
-       " [156, 590],\n",
-       " [158, 281, 442, 469, 501, 609, 627],\n",
-       " [192, 207, 217],\n",
-       " [200, 222],\n",
-       " [205, 330],\n",
-       " [210, 251],\n",
-       " [234, 240, 252],\n",
-       " [262, 402],\n",
-       " [267, 308, 652],\n",
-       " [287, 503, 631],\n",
-       " [299, 391, 429, 605],\n",
-       " [310, 625],\n",
-       " [315, 447],\n",
-       " [357, 467],\n",
-       " [366, 636],\n",
-       " [380, 441],\n",
-       " [406, 487],\n",
-       " [457, 535, 548, 564, 568, 575],\n",
-       " [458, 569, 576],\n",
-       " [532, 607],\n",
-       " [536, 549],\n",
-       " [539, 562]]"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clusters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As illustrated by the above example, the naive deduplication is not enough, we risk inflating the number of real user created (as opposed to bot generated) tweets."
+    "OK so let's now go on away and execute a naïve deduplication now"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
